<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetsListActivity"
    android:background="#ECEAE8"
    >

    <View
        android:id="@+id/info_title_view"
        android:layout_width="411dp"
        android:layout_height="96dp"
        android:background="#776B5D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pets_title_list"
        android:fontFamily="serif"
        android:textSize="40sp"
        android:shadowColor="@color/black"
        android:shadowDy="1"
        android:shadowRadius="3"
        app:layout_constraintBottom_toBottomOf="@+id/info_title_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/info_title_view"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/pet_avail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pets_available"
        android:textStyle="italic"
        android:fontFamily="monospace"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_title_view"
        app:layout_constraintVertical_bias="0.024" />

    <androidx.cardview.widget.CardView
        android:id="@+id/pet_card"
        android:layout_width="395dp"
        android:layout_height="103dp"
        android:layout_marginTop="10sp"
        app:cardCornerRadius="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_avail">

        <ImageView
            android:id="@+id/pet_img"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/corgi" />

        <TextView
            android:id="@+id/pet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="160sp"
            android:layout_marginTop="38sp"
            android:text="@string/corgi"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/adpt_btn"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="290sp"
            android:layout_marginTop="30sp"
            android:backgroundTint="#B0A695"
            android:text="@string/adopt"
            android:textSize="11sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/pet_card2"
        android:layout_width="395dp"
        android:layout_height="103dp"
        android:layout_marginTop="128dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pet_avail">

        <ImageView
            android:id="@+id/pet_img2"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/british_cat" />

        <TextView
            android:id="@+id/pet_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130sp"
            android:layout_marginTop="38sp"
            android:text="@string/british_cat"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/adpt_btn2"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_marginStart="290sp"
            android:layout_marginTop="30sp"
            android:backgroundTint="#B0A695"
            android:text="@string/adopt_btn_txt"
            android:textSize="11sp" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/paw_logo_icon1"
        android:layout_width="42dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/baseline_pets_24" />

    <TextView
        android:id="@+id/company_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paws_connect_corp"
        android:textAlignment="center"
        android:textColor="#555555"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paw_logo_icon1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#776B5D"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
</androidx.constraintlayout.widget.ConstraintLayout>