<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="424dp"
        android:layout_height="795dp"
        android:background="@drawable/beigeeeee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/adopt_icon"
        android:layout_width="158dp"
        android:layout_height="145dp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173"
        app:srcCompat="@drawable/adopt_icon" />

    <androidx.cardview.widget.CardView
        android:id="@+id/home_card"
        android:layout_width="365dp"
        android:layout_height="350dp"
        android:layout_marginStart="30sp"
        android:layout_marginTop="40sp"
        android:layout_marginEnd="30sp"
        android:backgroundTint="#F3EEEA"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adopt_icon"
        app:layout_constraintVertical_bias="0.705">

        <Button
            android:id="@+id/adopt_btn"
            android:layout_width="338dp"
            android:layout_height="70dp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="10sp"
            android:backgroundTint="#776B5D"
            android:text="@string/adopt_a_pet" />

        <Button
            android:id="@+id/pet_list_btn"
            android:layout_width="337dp"
            android:layout_height="70dp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="90sp"
            android:backgroundTint="#776B5D"
            android:text="@string/adopted_pets_btn" />

        <Button
            android:id="@+id/about_us_btn"
            android:layout_width="338dp"
            android:layout_height="70dp"
            android:layout_marginStart="15sp"
            android:layout_marginTop="170sp"
            android:backgroundTint="#776B5D"
            android:text="@string/about_us" />

        <ImageView
            android:id="@+id/paw_logo_icon"
            android:layout_width="42dp"
            android:layout_height="45dp"
            android:layout_marginStart="170sp"
            android:layout_marginTop="275sp"
            app:srcCompat="@drawable/baseline_pets_24" />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130sp"
            android:layout_marginTop="330sp"
            android:text="@string/paws_connect_corp"
            android:textAlignment="center"
            android:textColor="#555555"
            android:textStyle="italic" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/description_home"
        android:layout_width="377dp"
        android:layout_height="96dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/discover_your_perfect_match_in_our_pet_adoption_app_find_furry_friends_ready_for_their_forever_homes_with_ease_and_joy_join_us_today_to_start_your_heartwarming_journey"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/home_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adopt_icon"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
