<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdoptingActivity">

    <View
        android:id="@+id/info_title_view"
        android:layout_width="411dp"
        android:layout_height="96dp"
        android:background="#B0A695"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/information_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:shadowColor="@color/black"
        android:shadowDy="1"
        android:shadowRadius="3"
        android:text="INFORMATION"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/info_title_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/info_title_view" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/age_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/personal_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/age_input"
        android:layout_width="375dp"
        android:layout_height="56dp"
        android:layout_marginTop="188dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/address_input"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="@string/address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/info_title_view"
        app:layout_constraintVertical_bias="0.358" />

    <Button
        android:id="@+id/submitBtnD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#776B5D"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_input"
        app:layout_constraintVertical_bias="0.043" />

    <androidx.cardview.widget.CardView
        android:id="@+id/pet_card"
        android:layout_width="395dp"
        android:layout_height="200dp"
        app:cardCornerRadius="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitBtnC"
        app:layout_constraintVertical_bias="0.146">

        <ImageView
            android:id="@+id/pet_img"
            android:layout_width="131dp"
            android:layout_height="212dp"
            app:srcCompat="@drawable/corgi" />

        <TextView
            android:id="@+id/pet_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145sp"
            android:layout_marginTop="10sp"
            android:text="@string/corgi"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/corgi_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: Daisy"
            android:textSize="20sp"
            android:layout_marginStart="150sp"
            android:layout_marginTop="60sp"
            />

        <TextView
            android:id="@+id/corgi_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age: 3 years old"
            android:textSize="20sp"
            android:layout_marginStart="150sp"
            android:layout_marginTop="90sp"
            />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/backToPetListBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#B0A695"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
</androidx.constraintlayout.widget.ConstraintLayout>